[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Grenade/grenades_by_mtk.png" type="Texture" id=1]
[ext_resource path="res://Script/Players/SwampShooter/Grenade.gd" type="Script" id=2]
[ext_resource path="res://Scenes/PlayableCharacters/GrenadeExplosion.tscn" type="PackedScene" id=3]



[sub_resource type="PhysicsMaterial" id=1]
rough = true
bounce = 0.4

[sub_resource type="CircleShape2D" id=2]
custom_solver_bias = 1.0
radius = 3.0

[sub_resource type="CircleShape2D" id=3]
radius = 4.41884

[node name="Grenade" type="RigidBody2D"]
collision_layer = 0
collision_mask = 2
physics_material_override = SubResource( 1 )
continuous_cd = 2
can_sleep = false
script = ExtResource( 2 )
explosion_scene = ExtResource( 3 )

[node name="grenades_by_mtk" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
vframes = 4
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 1 )
shape = SubResource( 3 )

[node name="ExplosionTimer" type="Timer" parent="."]
one_shot = true

[node name="StopTorque" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered" flags=6]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
[connection signal="timeout" from="StopTorque" to="." method="_on_StopTorque_timeout"]
